[gd_scene load_steps=4 format=3 uid="uid://d77xw2bmfh1n"]

[ext_resource type="Script" path="res://Scenes/DeckCreator/deck_creator.gd" id="1_8ahtq"]
[ext_resource type="Texture2D" uid="uid://qaffgirofk7j" path="res://TestingResources/DeckCreator.png" id="2_l80bo"]
[ext_resource type="PackedScene" uid="uid://cw34kii6l1jgt" path="res://Managers/Scenes/DataManager.tscn" id="3_dtjdx"]

[node name="deck_creator" type="Node2D"]
script = ExtResource("1_8ahtq")

[node name="Panel" type="Panel" parent="."]
offset_top = 444.0
offset_right = 2378.0
offset_bottom = 641.0

[node name="Sprite2D" type="Sprite2D" parent="Panel"]
position = Vector2(2000, 99.75)
scale = Vector2(5, 0.4)
texture = ExtResource("2_l80bo")

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 18.0
offset_top = 8.0
offset_right = 280.0
offset_bottom = 190.0
text = "Tus Abuelos"

[node name="Button2" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 762.0
offset_right = 1024.0
offset_bottom = 182.0
text = "Tus Primos"

[node name="Button4" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1189.0
offset_top = 7.0
offset_right = 1451.0
offset_bottom = 189.0
text = "Tus Padres"

[node name="Button5" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 2036.0
offset_top = 10.0
offset_right = 2298.0
offset_bottom = 192.0
text = "Tus Vivos"

[node name="Button6" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1594.0
offset_top = 9.0
offset_right = 1856.0
offset_bottom = 191.0
text = "Tus Muertos"

[node name="Button3" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 362.0
offset_top = 9.0
offset_right = 624.0
offset_bottom = 191.0
text = "jiji"

[node name="Button7" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 2360.0
offset_top = 12.0
offset_right = 2622.0
offset_bottom = 194.0
text = "jaja"

[node name="Button8" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 2671.0
offset_top = 13.0
offset_right = 2933.0
offset_bottom = 195.0
text = "Carta 6"

[node name="Button9" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 2981.0
offset_top = 12.0
offset_right = 3243.0
offset_bottom = 194.0
text = "Carta 6"

[node name="Button10" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 3297.0
offset_top = 13.0
offset_right = 3559.0
offset_bottom = 195.0
text = "Carta 6"

[node name="HSlider" type="HSlider" parent="."]
offset_left = 10.0
offset_top = 414.0
offset_right = 1012.0
offset_bottom = 430.0

[node name="Continue" type="Button" parent="."]
offset_left = 954.0
offset_top = 323.0
offset_right = 1121.0
offset_bottom = 393.0
disabled = true
text = "Confirmar"

[node name="Deck_Label" type="Label" parent="."]
offset_left = 911.0
offset_top = 68.0
offset_right = 1081.0
offset_bottom = 128.0

[node name="DataManager" parent="." instance=ExtResource("3_dtjdx")]

[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed" binds= ["/absurdo/tusabuelos"]]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_button_pressed" binds= ["/absurdo/tusprimos"]]
[connection signal="pressed" from="Panel/Button4" to="." method="_on_button_pressed" binds= ["/absurdo/tuspadres"]]
[connection signal="pressed" from="Panel/Button5" to="." method="_on_button_pressed" binds= ["/absurdo/tusvivos"]]
[connection signal="pressed" from="Panel/Button6" to="." method="_on_button_pressed" binds= ["/absurdo/tusmuertos"]]
[connection signal="pressed" from="Panel/Button3" to="." method="_on_button_pressed" binds= ["/blanco/jiji"]]
[connection signal="pressed" from="Panel/Button7" to="." method="_on_button_pressed" binds= ["/blanco/jaja"]]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
